--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,16 +2,25 @@
 	box-sizing: border-box;
 }
 
+%clearfix {
+	&:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+}
+.module_border {
+	-webkit-box-shadow: 0px 0px 13px 4px rgba(150, 121, 33, 1);
+	-moz-box-shadow: 0px 0px 13px 4px rgba(150, 121, 33, 1);
+	box-shadow: 0px 0px 13px 4px rgba(150, 121, 33, 1);
+	margin: 2px;
+}
+
 
 /*Main layout*/
 
-.main_window {
-	margin: 5vh auto 0 auto;
-    width: 1392px;
-    height: 393px;
-	border-radius: 3px;
-	background: -webkit-gradient(linear, right bottom, left top, color-stop(0%, rgba(0, 0, 0, 0.3)), color-stop(100%, rgba(0, 0, 0, 0))), url('http://f.cl.ly/items/2q1f3t0C3R1b0g081w3n/vwood.png');
-	box-shadow: 0 0 50px rgba(0, 0, 0, 0.5) inset, 0 1px rgba(212, 152, 125, 0.2) inset, 0 5px 15px rgba(0, 0, 0, 0.5);
+body {
+	background: white;
 }
 
 .keys {
@@ -19,12 +28,61 @@
 	align-content: center;
 	width: auto;
 	margin: 0 auto;
+	position: relative;
 }
 
-body {
-	background: white;
+.main_window {
+	margin: 5vh auto 0 auto;
+	width: 1392px;
+	height: 393px;
+	border-radius: 3px;
+	background: -webkit-gradient(linear, right bottom, left top, color-stop(0%, rgba(0, 0, 0, 0.3)), color-stop(100%, rgba(0, 0, 0, 0))), url('http://f.cl.ly/items/2q1f3t0C3R1b0g081w3n/vwood.png');
+	box-shadow: 0 0 50px rgba(0, 0, 0, 0.5) inset, 0 1px rgba(212, 152, 125, 0.2) inset, 0 5px 15px rgba(0, 0, 0, 0.5);
+	display: flex;
+	position: relative;
+	padding: 15px;
+	color: white;
 }
 
+
+.oscillator {
+	@extend .module_border;
+	width: 25%;
+	.generator {
+		box-shadow: none;
+		height: 50%;
+	}
+	.osc_env {
+		box-shadow: none;
+		height: 50%;
+	}
+}
+  
+.filter {
+	@extend .module_border;
+	width: 15%;
+}
+
+.effects {
+	@extend .module_border;
+	width: 40%;
+}
+
+.amplifier {
+	@extend .module_border;
+	width: 20%;
+	.amp_env {
+		box-shadow: none;
+		height: 70%;
+	}
+	.transposition {
+		box-shadow: none;
+		heigth: 30%;
+	}
+}
+
+
+/*Keyboard layout*/
 .set {
 	height: 18.875em;
 	width: 925px;
@@ -32,11 +90,12 @@ body {
 	padding: 0 0 0 3em;
 	position: relative;
 	border: 1px solid #160801;
-	border-radius: 3px;
+	border-bottom-left-radius: 3px;
+	border-bottom-right-radius: 3px;
 	background: -webkit-gradient(linear, right bottom, left top, color-stop(0%, rgba(0, 0, 0, 0.3)), color-stop(100%, rgba(0, 0, 0, 0))), url('http://f.cl.ly/items/2q1f3t0C3R1b0g081w3n/vwood.png');
 	box-shadow: 0 0 50px rgba(0, 0, 0, 0.5) inset, 0 1px rgba(212, 152, 125, 0.2) inset, 0 5px 15px rgba(0, 0, 0, 0.5);
+	//color: white;
 }
-
 li {
 	margin: 0;
 	padding: 0;
@@ -44,7 +103,6 @@ li {
 	position: relative;
 	float: left;
 }
-
 ul .white {
 	height: 16em;
 	width: 4em;
@@ -55,7 +113,6 @@ ul .white {
 	box-shadow: -1px 0 0 rgba(255, 255, 255, 0.8) inset, 0 0 5px #ccc inset, 0 0 3px rgba(0, 0, 0, 0.2);
 	background: linear-gradient(45deg, #eee 0%, #fff 100%);
 }
-
 ul .white:active {
 	border-top: 1px solid #777;
 	border-left: 1px solid #999;
@@ -63,7 +120,6 @@ ul .white:active {
 	box-shadow: 2px 0 3px rgba(0, 0, 0, 0.1) inset, -5px 5px 20px rgba(0, 0, 0, 0.2) inset, 0 0 3px rgba(0, 0, 0, 0.2);
 	background: linear-gradient(top, #fff 0%, #e9e9e9 100%);
 }
-
 .black {
 	height: 8em;
 	width: 2em;
@@ -74,27 +130,23 @@ ul .white:active {
 	box-shadow: -1px -1px 2px rgba(255, 255, 255, 0.2) inset, 0 -5px 2px 3px rgba(0, 0, 0, 0.6) inset, 0 2px 4px rgba(0, 0, 0, 0.5);
 	background: linear-gradient(45deg, #222 0%, #555 100%);
 }
-
 .black:active {
 	box-shadow: -1px -1px 2px rgba(255, 255, 255, 0.2) inset, 0 -2px 2px 3px rgba(0, 0, 0, 0.6) inset, 0 1px 2px rgba(0, 0, 0, 0.5);
 	background: linear-gradient(left, #444 0%, #222 100%);
 }
-
 .g,
 .a,
 .b,
 .d,
 .e,
- {
+{
 	margin: 0 0 0 -1em;
 }
-
-
-
 ul li:first-child {
-	border-radius: 5px 0 5px 5px;
+	border-radius: 0 0 5px 5px;
+}
+ul li:last-child {
+	border-radius: 0 0 5px 5px;
 }
 
-ul li:last-child {
-	border-radius: 0 5px 5px 5px;
-}
+/*Sliders styling*/
