--- a/sass/main.scss
+++ b/sass/main.scss
@@ -103,7 +103,7 @@ li {
 	position: relative;
 	float: left;
 }
-ul .white {
+.white {
 	height: 16em;
 	width: 4em;
 	z-index: 1;
@@ -118,7 +118,15 @@ ul .white:active {
 	border-left: 1px solid #999;
 	border-bottom: 1px solid #999;
 	box-shadow: 2px 0 3px rgba(0, 0, 0, 0.1) inset, -5px 5px 20px rgba(0, 0, 0, 0.2) inset, 0 0 3px rgba(0, 0, 0, 0.2);
-	background: linear-gradient(top, #fff 0%, #e9e9e9 100%);
+		background: linear-gradient(top, rgba(255, 255, 0, 0.8) 50%, rgba(255, 255, 0, 0.8) 100%);
+}
+.white_active {
+	border-top: 1px solid #777;
+	border-left: 1px solid #999;
+	border-bottom: 1px solid #999;
+	box-shadow: -1px -1px 2px rgba(255, 255, 0, 0.8) inset, 0 -2px 2px 3px rgba(0, 0, 0, 0.6) inset, 0 1px 2px rgba(0, 0, 0, 0.5);
+//	box-shadow: 2px 0 3px rgba(0, 0, 0, 0.1) inset, -5px 5px 20px rgba(0, 0, 0, 0.2) inset, 0 0 3px rgba(0, 0, 0, 0.2);
+	background: linear-gradient(top, rgba(255, 255, 0, 0.8) 50%, rgba(255, 255, 0, 0.8) 100%);
 }
 .black {
 	height: 8em;
@@ -130,9 +138,13 @@ ul .white:active {
 	box-shadow: -1px -1px 2px rgba(255, 255, 255, 0.2) inset, 0 -5px 2px 3px rgba(0, 0, 0, 0.6) inset, 0 2px 4px rgba(0, 0, 0, 0.5);
 	background: linear-gradient(45deg, #222 0%, #555 100%);
 }
-.black:active {
-	box-shadow: -1px -1px 2px rgba(255, 255, 255, 0.2) inset, 0 -2px 2px 3px rgba(0, 0, 0, 0.6) inset, 0 1px 2px rgba(0, 0, 0, 0.5);
-	background: linear-gradient(left, #444 0%, #222 100%);
+.black:active { 
+	box-shadow: -1px -1px 2px rgba(255, 255, 0, 0.8) inset, 0 -2px 2px 3px rgba(0, 0, 0, 0.6) inset, 0 1px 2px rgba(0, 0, 0, 0.5);
+	background: linear-gradient(left, #444 20%, #666 100%);
+}
+.black_active {
+	box-shadow: -1px -1px 2px rgba(255, 255, 0, 0.8) inset, 0 -2px 2px 3px rgba(0, 0, 0, 0.6) inset, 0 1px 2px rgba(0, 0, 0, 0.5);
+	background: linear-gradient(left, #444 20%, #666 100%);
 }
 .g,
 .a,
